### This part of Makefile.am can be customized by you.

# mate-doc-utils standard variables:
include $(top_srcdir)/mate-doc-utils.make
dist-hook: doc-dist-hook

# The name of the directory in /usr/share/mate/help/, 
# and the name of the main .xml file:
DOC_MODULE = creating-marco-themes

# The names of any files included via entity declarations.
DOC_ENTITIES =

# The names of any files included by xincluded (preferred):
DOC_INCLUDES =

# The names of any pictures:
DOC_FIGURES = 

# The names of any locales for which documentation translations exist:
DOC_LINGUAS =



