install_data(
  'button_close_normal.png',
  'button_close_prelight.png',
  'button_close_pressed.png',
  'button_max_normal.png',
  'button_max_prelight.png',
  'button_max_pressed.png',
  'button_menu_normal.png',
  'button_menu_prelight.png',
  'button_menu_pressed.png',
  'button_min_normal.png',
  'button_min_prelight.png',
  'button_min_pressed.png',
  'menu.png',
  'metacity-theme-1.xml',
  install_dir : join_paths(datadir, 'themes', 'DustBlue', 'metacity-1')
)
