install_data(
  'active-button.png',
  'active-close-button.png',
  'active-close-menu-icon.png',
  'active-maximize-button.png',
  'active-maximize-menu-icon.png',
  'active-menu-button.png',
  'active-minimize-button.png',
  'active-minimize-menu-icon.png',
  'inactive-close-button.png',
  'inactive-maximize-button.png',
  'inactive-menu-button.png',
  'inactive-minimize-button.png',
  'metacity-theme-1.xml',
  install_dir : join_paths(datadir, 'themes', 'Gorilla', 'metacity-1')
)
