install_data(
  'close_normal.png',
  'close_normal_small.png',
  'close_pressed.png',
  'close_pressed_small.png',
  'maximize_normal.png',
  'maximize_pressed.png',
  'metacity-theme-1.xml',
  'minimize_normal.png',
  'minimize_pressed.png',
  'restore_normal.png',
  'restore_pressed.png',
  install_dir : join_paths(datadir, 'themes', 'Raleigh', 'metacity-1')
)
