install_data(
  'close.png',
  'close_unfocused_over.png',
  'close_unfocused.png',
  'maximize.png',
  'maximize_unfocused_over.png',
  'maximize_unfocused.png',
  'menu.png',
  'menu_prelight.png',
  'metacity-theme-1.xml',
  'minimize.png',
  'minimize_unfocused_over.png',
  'minimize_unfocused.png',
  'trough_left.png',
  'trough_left_unfocused.png',
  'trough_middle.png',
  'trough_middle_unfocused.png',
  'trough_right.png',
  'trough_right_unfocused.png',
  'unmaximize.png',
  'unmaximize_unfocused_over.png',
  'unmaximize_unfocused.png',
  install_dir : join_paths(datadir, 'themes', 'eOS', 'metacity-1')
)
